# fastapi-tortoise-aerich-traefik-docker

./: .gitignore  README.md  docker-compose.yml  env_template  traefik.toml
src/: Dockerfile  aerich.ini  pyproject.toml
src/app/: main.py
src/app/api/: deps.py  routers.py
src/app/api/endpoints/: login.py  user.py
src/app/core/: config.py  db.py  security.py
src/app/models/: user.py
src/app/schemas/: __init__.py  responses.py  token.py
